docs: restructure site around user needs with code-synced READMEs
Reorganize the Hugo documentation site from package-oriented layout to
user-oriented sections (Concepts, Guides, Examples, API Reference, CLI
Reference, Contributing) following Diataxis principles.

Key changes:
- Add 9 package READMEs that live with code and auto-mount to the site
- Remove 16 internal design doc mounts, keeping only user-facing content
- Create 5 cross-cutting guides linking to package READMEs for details
- Add CLI reference auto-generation from cobra commands (cmd/gendocs)
- Add documentation sync policy with reverse mapping table in AGENTS.md
- Fix cert-manager (v1.16.5) and External Secrets (v0.19.2) versions
- Simplify WIP banners (single header, remove footer/logo notices)
- Add docs-cli Makefile target and integrate into site build pipeline
- Add Go setup + docs-cli to CI docs-build job
- Add documentation checklist to PR template

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -386,13 +386,17 @@ jobs:
     name: build
     runs-on: ubuntu-latest
     timeout-minutes: 1
-    needs: build-binaries
+    needs: [build-binaries, docs-build]
     if: always()
     steps:
     - name: Check build results
       run: |
         if [ "${{ needs.build-binaries.result }}" != "success" ]; then
           echo "Build matrix failed or was cancelled"
+          exit 1
+        fi
+        if [ "${{ needs.docs-build.result }}" != "success" ]; then
+          echo "Docs build failed or was cancelled"
           exit 1
         fi
 
@@ -546,6 +550,19 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v6
 
+    - name: Read Go version from mise.toml
+      id: go-version
+      run: |
+        GO_VER=$(grep '^go = ' mise.toml | sed 's/go = "\(.*\)"/\1/')
+        echo "version=$GO_VER" >> $GITHUB_OUTPUT
+        echo "Using Go version: $GO_VER"
+
+    - name: Set up Go
+      uses: actions/setup-go@v6
+      with:
+        go-version: ${{ steps.go-version.outputs.version }}
+        check-latest: true
+
     - name: Install Hugo CLI
       run: |
         wget -q -O ${{ runner.temp }}/hugo.deb \
@@ -557,6 +574,9 @@ jobs:
 
     - name: Inject front matter
       run: bash site/scripts/inject-frontmatter.sh
+
+    - name: Generate CLI reference
+      run: make docs-cli
 
     - name: Check for unmapped docs
       run: bash site/scripts/check-unmapped-docs.sh
