feat(kubernetes): expose HPA helpers in pkg/kubernetes
Move HorizontalPodAutoscaler builder functions from internal/kubernetes
to pkg/kubernetes so external consumers (Crane) can import them.
Replace internal/validation dependency with inline nil check using
pkg/errors.ErrNilHorizontalPodAutoscaler.

Closes #173

--- a/site/hugo.toml
+++ b/site/hugo.toml
@@ -66,6 +66,9 @@ title = 'Go Kure'
     source = ".generated/api-reference/cli.md"
     target = "content/api-reference/cli.md"
   [[module.mounts]]
+    source = ".generated/api-reference/kubernetes-builders.md"
+    target = "content/api-reference/kubernetes-builders.md"
+  [[module.mounts]]
     source = ".generated/api-reference/fluxcd-builders.md"
     target = "content/api-reference/fluxcd-builders.md"
   [[module.mounts]]
