fix(lint): fix CI lint baseline and resolve pre-existing lint issues
Remove fragile new-from-rev: HEAD~30 from .golangci.yml which broke
in CI shallow clones. Instead, pass --new-from-rev=origin/<base> as a
CLI flag in CI for PR builds only.

Fix pre-existing lint issues now surfaced:
- Remove dead nil check after exhaustive if/else (cmd/demo)
- Fix unused initial assignment in logger setup (pkg/cmd/kurel)
- Remove unused opts parameter body in loader methods (pkg/launcher)
- Suppress deprecated type warning in scheme test (pkg/kubernetes)
- Exclude unusedwrite from test files in golangci config

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -122,8 +122,17 @@ jobs:
     - name: Run go vet
       run: make vet
 
+    - name: Fetch base branch for diff-based lint
+      if: github.event_name == 'pull_request'
+      run: git fetch origin ${{ github.base_ref }} --depth=1
+
     - name: Run linters
-      run: make lint
+      run: |
+        if [ "${{ github.event_name }}" = "pull_request" ]; then
+          make lint LINT_FLAGS="--new-from-rev=origin/${{ github.base_ref }}"
+        else
+          make lint
+        fi
 
   # =============================================================================
   # Stage 2: Tests and Security (parallel)
