docs: add version-aware banner and header display
Add version parameter to hugo.toml (default: "dev") and make the WIP
banner conditional on version == "dev". When a latest stable version
exists in the Relearn version config, the banner links to it. Display
the current version badge next to the site title in the sidebar.

Closes #212, closes #213, closes #214

--- a/site/hugo.toml
+++ b/site/hugo.toml
@@ -6,6 +6,9 @@ title = 'Go Kure'
   disableInlineCopyToClipBoard = true
   customHeaderPartial = "custom-header.html"
   themeVariant = "relearn-dark"
+  # Version is overridden at build time via versions.toml config overlay.
+  # Default to "dev" so local builds and CI validation show the WIP banner.
+  version = "dev"
 
 [module]
   [[module.imports]]
