build: clean stale root content on dev deploys
Add a cleanup step to deploy-docs that runs on dev deploys (push to
main). It removes stale pre-versioning content from the root of
go-kure.github.io and replaces index.html with a redirect to /dev/.

Version subdirectories (dev/, v*/), CNAME, and .nojekyll are preserved.
When the first stable release deploys with set_latest=true, the redirect
is overwritten by the full stable site.

Closes #222

--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -143,6 +143,27 @@ jobs:
         rm -rf "${SLOT}"
         cp -r ../site/public-slot "${SLOT}"
 
+        # --- Clean stale root content (dev deploys only) ---
+        if [[ "$SLOT" == "dev" && "$SET_LATEST" != "true" ]]; then
+          echo "Cleaning stale root content..."
+          find . -maxdepth 1 \
+            -not -name '.' \
+            -not -name '.git' \
+            -not -name 'CNAME' \
+            -not -name '.nojekyll' \
+            -not -name 'dev' \
+            -not -name 'v*' \
+            -exec rm -rf {} +
+          # Redirect root to /dev/
+          cat > index.html <<'REDIR'
+        <!DOCTYPE html>
+        <html>
+        <head><meta http-equiv="refresh" content="0; url=/dev/"></head>
+        <body><p>Redirecting to <a href="/dev/">development documentation</a>...</p></body>
+        </html>
+        REDIR
+        fi
+
         # --- Deploy to root (latest stable) ---
         if [[ "$SET_LATEST" == "true" ]]; then
           echo "Deploying to / (latest stable)..."
